# setuptools-generate

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  flake.nix  package.json  pyproject.toml  requirements.txt
.github/workflows/: main.yml
docs/: conf.py  requirements.txt
docs/api/: setuptools_generate.md
docs/resources/: changelog.md  intention.md
requirements/: dev.txt
src/setuptools_generate/: __init__.py  _click.py  _help2man.py  _markdown_it.py  _shtab.py  metainfo.py  utils.py
tests/: generate_test.py
tests/changelog/: changelog_test.py
tests/changelog/test/: CHANGELOG.md
tests/click/: click_test.py
tests/click/src/: demo_click.py
tests/metainfo/: metainfo_test.py
tests/shtab/: shtab_test.py
tests/shtab/src/: demo_shtab.py
tests/shtab/wrong/: no_shtab.py
